Added .pyc to gitignore

--- a/watermark/ci/Jenkinsfile
+++ b/watermark/ci/Jenkinsfile
@@ -29,6 +29,7 @@ node {
             app.inside {
                 sh "echo Test: Test python wrapper"
                 sh "ls"
+                sh "ls setup.py"
                 sh "pwd"
                 sh '''
                     python3.5 -m pip install --user -e .
