--- a/watermark/ci/Jenkinsfile
+++ b/watermark/ci/Jenkinsfile
@@ -24,25 +24,6 @@ node {
         app = build('watermark')
     
     }
-    stage ('Test Building Python Wrapper') {
-        dir('watermark/wrappers/python'){
-            app.inside {
-                sh "echo Test: Test python wrapper"
-                sh "ls"
-                sh "pwd"
-                sh '''
-                    python3.5 -m pip install --user -e .
-                    python3.5 -m pytest
-                    python3.5 setup.py sdist
-                    echo Testing that package exists:
-                    test -f dist/python3-cxs-0.0.1.tar.gz
-                '''
-            
-                
-            }
-        }
-    }
-
     stage ('Building'){
         app.inside {
             sh "rustc --version"
@@ -57,8 +38,25 @@ node {
             sh "cd watermark; cargo test"
         }
     }
-
-
+    testWrapper(env)
 }
 
+def testWrapper(env) {
+    stage ('Test Building Python Wrapper') {
+        dir('watermark/wrappers/python'){
+            env.inside {
+                sh "echo Test: Test python wrapper"
+                sh "ls"
+                sh "pwd"
+                sh '''
+                    python3.5 -m pip install --user -e .
+                    python3.5 -m pytest
+                    python3.5 setup.py sdist
+                    echo Testing that package exists:
+                    test -f dist/python3-cxs-0.0.1.tar.gz
+                '''
+            }
+        }
+    }
+}
 
