--- a/watermark/ci/Jenkinsfile
+++ b/watermark/ci/Jenkinsfile
@@ -42,6 +42,9 @@ node {
 
 def testNodeWrapper(env) {
     stage ('Test Node Wrapper'){
+        sh 'node -v'
+        sh 'npm install'
+        sh 'npm test'
     }
     stage ('Build Node Package'){
     }
