--- a/watermark/ci/Jenkinsfile
+++ b/watermark/ci/Jenkinsfile
@@ -42,6 +42,7 @@ node {
 
 def testNodeWrapper(env) {
     stage ('Test Node Wrapper'){
+        sh 'npm -v'
         sh 'npm install'
         sh 'npm test'
     }
