--- a/watermark/ci/Jenkinsfile
+++ b/watermark/ci/Jenkinsfile
@@ -42,9 +42,11 @@ node {
 
 def testNodeWrapper(env) {
     stage ('Test Node Wrapper'){
-        sh 'npm -v'
-        sh 'npm install'
-        sh 'npm test'
+        app.inside {
+            sh 'npm -v'
+            sh 'npm install'
+            sh 'npm test'
+        }
     }
     stage ('Build Node Package'){
     }
