--- a/watermark/wrappers/node/package.json
+++ b/watermark/wrappers/node/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/evernym/cxs#readme",
   "dependencies": {
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "chai": "^4.1.1"
   }
 }
