fixed the default path for the .so file. Exported the Connection class

--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -31,6 +31,7 @@
     "build": "dist"
   },
   "devDependencies": {
+    "@types/node": "^8.0.34",
     "tslint-config-standard": "^6.0.1",
     "typescript": "^2.5.3"
   }
