--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -13,34 +13,45 @@ def build(name, file = 'cxs/ci/ubuntu.dockerfile cxs/ci', customParams = '') {
 }
 
 node('ubuntu') {
-    stage ('Checkout'){
-        checkout scm
-    }
-    stage ('Build docker environment'){
-        sh "pwd"
-        sh "ls ${pathToCi}"
-        sh "echo building"
-        app = build('cxs')
-    
-    }
-    stage ('Building'){
-        app.inside {
-            sh "rustc --version"
-            sh "gcc --version"
-            sh "mkdir -p cxs/wrappers/node/lib"
-            sh "cd cxs/libcxs; cargo build"
-            sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib"
-            sh "ls cxs/wrappers/node/lib"
+    try {
+        stage ('Checkout'){
+            checkout scm
         }
-    }
+        stage ('Build docker environment'){
+            sh "pwd"
+            sh "ls ${pathToCi}"
+            sh "echo building"
+            app = build('cxs')
+        
+        }
+        stage ('Building'){
+            app.inside {
+                sh "rustc --version"
+                sh "gcc --version"
+                sh "mkdir -p cxs/wrappers/node/lib"
+                sh "cd cxs/libcxs; cargo build"
+                sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib"
+                sh "ls cxs/wrappers/node/lib"
+            }
+        }
 
-    stage ('Testing'){
-        sh "echo Testing"
-        app.inside {
-            sh "cd cxs/libcxs; cargo test"
+        stage ('Testing'){
+            sh "echo Testing"
+            app.inside {
+                sh "cd cxs/libcxs; cargo test"
+            }
+        }
+        testNodeWrapper(app)
+    } catch {
+        currentBuild.result = "FAILED"
+    } finally {
+        if env.BRANCH_NAME == "master" {
+            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
+        } else {
+            echo "${env.BRANCH_NAME}: skip publishing"
+            step([$class: 'WsCleanup'])
         }
     }
-    testNodeWrapper(app)
 }
 
 def testNodeWrapper(env) {
