--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -46,12 +46,11 @@ node('ubuntu') {
         currentBuild.result = "FAILED"
         echo "$ex error"
     } finally {
-        if "${env.BRANCH_NAME}" == "master" {
+        if ("${env.BRANCH_NAME}" == "master") {
             archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
-        } else {
-            echo "${env.BRANCH_NAME}: skip publishing"
-            step([$class: 'WsCleanup'])
         }
+        step([$class: 'WsCleanup'])
+        
     }
 }
 
