--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -33,9 +33,8 @@
     "build": "dist"
   },
   "devDependencies": {
-    "@types/node": "^8.0.34",
-    "tslint-config-standard": "^6.0.1",
+    "@types/node": "^8.0.44",
     "jsdoc": "^3.5.5",
-    "typescript": "^2.5.3"
+    "tslint-config-standard": "^6.0.1"
   }
 }
