--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -23,9 +23,10 @@
     "fs-extra": "^4.0.2",
     "mocha": "^3.5.0",
     "path": "^0.12.7",
+    "sleep": "^5.1.1",
     "tslint": "^5.7.0",
-    "weak": "^1.0.1",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "weak": "^1.0.1"
   },
   "directories": {
     "test": "test",
