struggling with deallocating a string in get_dat

--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -24,8 +24,8 @@
     "mocha": "^3.5.0",
     "path": "^0.12.7",
     "tslint": "^5.7.0",
-    "weak": "^1.0.1",
-    "typescript": "^2.5.3"
+    "typescript": "^2.5.3",
+    "weak": "^1.0.1"
   },
   "directories": {
     "test": "test",
@@ -33,9 +33,9 @@
     "build": "dist"
   },
   "devDependencies": {
-    "@types/node": "^8.0.34",
-    "tslint-config-standard": "^6.0.1",
+    "@types/node": "^8.0.44",
     "jsdoc": "^3.5.5",
+    "tslint-config-standard": "^6.0.1",
     "typescript": "^2.5.3"
   }
 }
