--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@types/node": "^8.0.44",
     "jsdoc": "^3.5.5",
-    "tslint-config-standard": "^6.0.1"
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^2.5.3"
   }
 }
