--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -59,7 +59,7 @@ def testNodeWrapper(envn) {
             envn.inside {
                 sh 'npm -v'
                 sh 'npm install'
-                sh 'node_modules/.bin/tsc -p tsconfig.json'
+                sh 'npm run compile'
                 sh 'npm test'
             }
         }
