--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -8,7 +8,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "compile": "./node_modules/.bin/tsc -p ./tsconfig.json",
-    "lint": "./node_modules/.bin/tslint --type-check -c ./tslint.json -p ./tsconfig.json",
+    "lint": "./node_modules/.bin/tslint --type-check -c ./tslint.json -p ./tsconfig.json && ./node_modules/.bin/standard 'test/**/*.js'",
     "test": "mocha -gc --expose-gc test/**/*.js",
     "doc-gen": "./node_modules/.bin/jsdoc -d doc src/*"
   },
@@ -31,7 +31,6 @@
     "mocha": "^3.5.0",
     "path": "^0.12.7",
     "ref": "^1.3.5",
-    "sleep": "^5.1.1",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "weak": "^1.0.1"
@@ -43,7 +42,13 @@
   },
   "devDependencies": {
     "jsdoc": "^3.5.5",
+    "standard": "^10.0.3",
     "tslint-config-standard": "^6.0.1",
     "typescript": "^2.5.3"
+  },
+  "standard": {
+    "env": [
+      "mocha"
+    ]
   }
 }
