--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -31,6 +31,7 @@
     "mocha": "^3.5.0",
     "path": "^0.12.7",
     "ref": "^1.3.5",
+    "ref-struct": "^1.1.0",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
     "weak": "^1.0.1"
