--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -43,7 +43,8 @@
   "devDependencies": {
     "jsdoc": "^3.5.5",
     "standard": "^10.0.3",
-    "tslint-config-standard": "^6.0.1"
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^2.5.3"
   },
   "standard": {
     "env": [
