Fixed Nodejs lint issue

--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -20,9 +20,9 @@ node('ubuntu') {
         testRust(app) 
         createZip(app)
         testNodeWrapper(app)
-        //if (env.BRANCH_NAME == "master") {
-        //    createZip(app)
-        //}
+        if (env.BRANCH_NAME == "master") {
+            createZip(app)
+        }
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
