--- a/cxs/wrappers/node/package.json
+++ b/cxs/wrappers/node/package.json
@@ -41,6 +41,7 @@
     "chai": "^4.1.2",
     "jsdoc": "^3.5.5",
     "mocha": "^3.5.3",
+    "sinon": "^4.1.2",
     "standard": "^10.0.3",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^6.0.1",
