--- a/cxs/libcxs/Cargo.toml
+++ b/cxs/libcxs/Cargo.toml
@@ -27,9 +27,7 @@ rmpv = "0.4.0"
 rmp = "0.8"
 rmp-serde = "0.13.7"
 openssl = "0.9.20"
+base64 = "0.8.0"
 
 [dev-dependencies]
-futures = "0.1"
-hyper = "0.11"
 tempfile = "2.2"
-mockito = "0.9.0"
