--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -18,11 +18,11 @@ node('ubuntu') {
         app = buildDocker()
         buildRust(app)
         testRust(app) 
-        createZip(app)
         testNodeWrapper(app)
-        if (env.BRANCH_NAME == "master") {
+//        if (env.BRANCH_NAME == "master") {
             createZip(app)
-        }
+            createDeb(app)
+//        }
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
@@ -71,10 +71,21 @@ def testRust(envn) {
 
 def createZip(envn) {
     dir ('cxs/libcxs/target/debug'){
-        stage ('Create Zip File') {
+        stage ('Create TAR.GZ File') {
             envn.inside {
-                sh 'tar -cf libcxs.tar libcxs.so'
+                sh 'tar -zvcf libcxs.tar.gz libcxs.so'
                 archiveArtifacts allowEmptyArchive: true, artifacts: 'libcxs.tar'
+            }
+        }
+    }
+}
+
+def createDeb(envn) {
+    dir('cxs/libcxs') {
+        stage('Create Debian File') {
+            envn.inside {
+                sh 'cargo deb --no-build'
+                archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
             }
         }
     }
