--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -84,7 +84,7 @@ def createDeb(envn) {
     dir('cxs/libcxs') {
         stage('Create Debian File') {
             envn.inside {
-                sh 'cargo deb --no-build'
+                sh 'cargo deb'
                 archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
             }
         }
