--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -86,6 +86,7 @@ def createDeb(envn) {
             envn.inside {
                 sh 'pwd'
                 sh 'ls'
+                sh 'cargo build'
                 sh 'cargo deb'
                 archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
             }
