--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -16,13 +16,12 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
-//        buildRust(app)
-//        testRust(app) 
-//        testNodeWrapper(app)
-//        if (env.BRANCH_NAME == "master") {
-//            createZip(app)
-            createDeb(app)
-//        }
+        buildRust(app)
+        testRust(app) 
+        testNodeWrapper(app)
+        if (env.BRANCH_NAME == "master") {
+            createZip(app)
+        }
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
@@ -55,6 +54,7 @@ def buildRust(envn){
             sh "cd cxs/libcxs; cargo build"
             sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib"
             sh "ls cxs/wrappers/node/lib"
+            createDeb()
         }
     }
 }
@@ -80,18 +80,11 @@ def createZip(envn) {
     }
 }
 
-def createDeb(envn) {
-    dir('cxs/libcxs') {
-        stage('Create Debian File') {
-            envn.inside {
-                sh 'pwd'
-                sh 'ls'
-                sh 'cargo build'
-                sh 'cargo deb'
-                archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
-            }
-        }
-    }
+def createDeb() {
+    sh 'pwd'
+    sh 'ls'
+    sh 'cd cxs/libcxs; cargo deb'
+    archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
 }
 
 def testNodeWrapper(envn) {
