--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -84,7 +84,7 @@ def createDeb() {
     sh 'pwd'
     sh 'ls'
     sh 'cd cxs/libcxs; pwd; ls; cargo package; cargo deb'
-    archiveArtifacts allowEmptyARchive: true, artifacts: 'target/debian/libcxs_0.0.1_amd64.deb'
+    archiveArtifacts allowEmptyARchive: true, artifacts: 'cxs/libcxs/target/debian/libcxs_0.0.1_amd64.deb'
 }
 
 def testNodeWrapper(envn) {
