--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -16,12 +16,11 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
-        buildRust(app)
-        testRust(app) 
-        testNodeWrapper(app)
-        if (env.BRANCH_NAME == "master") {
-            createZip(app)
-        }
+//        buildRust(app)
+//        testRust(app) 
+//        testNodeWrapper(app)
+//        createZip(app)
+        buildDeb(app)
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
@@ -54,7 +53,6 @@ def buildRust(envn){
             sh "cd cxs/libcxs; cargo build"
             sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib"
             sh "ls cxs/wrappers/node/lib"
-            createDeb()
         }
     }
 }
@@ -74,17 +72,21 @@ def createZip(envn) {
         stage ('Create TAR.GZ File') {
             envn.inside {
                 sh 'tar -zvcf libcxs.tar.gz libcxs.so'
-                archiveArtifacts allowEmptyArchive: true, artifacts: 'libcxs.tar'
+                archiveArtifacts allowEmptyArchive: true, artifacts: 'libcxs.tar.gz'
             }
         }
     }
 }
 
-def createDeb() {
-    sh 'pwd'
-    sh 'ls'
-    sh 'cd cxs/libcxs; pwd; ls; cargo package; cargo deb'
-    archiveArtifacts allowEmptyARchive: true, artifacts: 'cxs/libcxs/target/debian/libcxs_0.0.1_amd64.deb'
+def createDeb(envn) {
+    stage('Build Libcxs Debian') {
+        envn.inside {
+            sh 'pwd'
+            sh 'ls'
+            sh 'cd cxs/libcxs; pwd; ls; cargo package; cargo deb'
+            archiveArtifacts allowEmptyARchive: true, artifacts: 'cxs/libcxs/target/debian/libcxs_0.0.1_amd64.deb'
+        }
+    }
 }
 
 def testNodeWrapper(envn) {
