--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -1,5 +1,6 @@
 #!groovy
 
+def version = "0.0.1"
 def dockerfile= 'dockerfile'
 
 def getUserUid() {
@@ -16,10 +17,10 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
-//        buildRust(app)
-//        testRust(app) 
-//        testNodeWrapper(app)
-//        createZip(app)
+        buildRust(app)
+        testRust(app) 
+        testNodeWrapper(app)
+        createZip(app)
         createDeb(app)
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
@@ -51,7 +52,7 @@ def buildRust(envn){
             sh "gcc --version"
             sh "mkdir -p cxs/wrappers/node/lib"
             sh "cd cxs/libcxs; cargo build"
-            sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib"
+            sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib/"
             sh "ls cxs/wrappers/node/lib"
         }
     }
@@ -84,7 +85,7 @@ def createDeb(envn) {
             sh 'pwd'
             sh 'ls'
             sh 'cd cxs/libcxs; pwd; ls; cargo package; cargo deb'
-            archiveArtifacts allowEmptyARchive: true, artifacts: 'cxs/libcxs/target/debian/libcxs_0.0.1_amd64.deb'
+            archiveArtifacts allowEmptyARchive: true, artifacts: 'cxs/libcxs/target/debian/libcxs_${version}_amd64.deb'
         }
     }
 }
