Added all steps back in

--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -16,10 +16,10 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
-//        buildRust(app)
-//        testRust(app) 
-//        testNodeWrapper(app)
-//        createZip(app)
+        buildRust(app)
+        testRust(app) 
+        testNodeWrapper(app)
+        createZip(app)
         createDeb(app)
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
