--- a/cxs/libcxs/Cargo.toml
+++ b/cxs/libcxs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "libcxs"
-version = "0.0.1"
+version = "0.1.44957+a53570f"
 authors = [ "Mark Hadley <mark.hadley@evernym.com>" ]
 publish = false
 description = "C callable library for libcxs"
@@ -40,10 +40,10 @@ maintainer = "Mark Hadley<mark.hadley@evernym.com>, Devin Fisher, Ryan Marsh, Do
 copyright = "2018, Evernym Inc."
 depends = "$auto, systemd"
 extended-description = """\
-"Everything is awesome when you're part of a team!" #TeamOneDirection."""
+"TODO DESCRIPTION"""
 section = "admin"
 priority = "optional"
 assets = [
-    ["target/package/libcxs-0.0.1/target/debug/libcxs.so", "usr/lib/libcxs/", "644"]
+    ["target/release/libcxs.so*", "usr/lib/", "644"]
 ]
 
