--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -1,7 +1,6 @@
 #!groovy
 
 def dockerfile= 'dockerfile'
-def version = "0.0.1"
 
 def getUserUid() {
     return sh(returnStdout: true, script: 'id -u').trim()
@@ -19,7 +18,7 @@ node('ubuntu') {
         app = buildDocker()
         buildRust(app)
         //testRust(app) 
-        testNodeWrapper(app)
+        //testNodeWrapper(app)
         //createZip(app)
         //createDeb(app)
     } catch (Exception ex) {
@@ -50,10 +49,11 @@ def buildRust(envn){
         envn.inside {
             sh "rustc --version"
             sh "gcc --version"
-            sh "mkdir -p cxs/wrappers/node/lib"
-            sh "cd cxs/libcxs; cargo build"
-            sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib/"
-            sh "ls cxs/wrappers/node/lib"
+            sh "mkdir -p /sdk/cxs/wrappers/node/lib"
+            sh "cd /sdk/cxs/libcxs; cargo build --release"
+            sh "ls -l /sdk/cxs/libcxs/target/release"
+            sh "cp /sdk/cxs/libcxs/target/release/libcxs.so /sdk/cxs/wrappers/node/lib/"
+            sh "ls /sdk/cxs/wrappers/node/lib"
         }
     }
 }
