--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -55,7 +55,7 @@ def buildRust(envn){
             sh "gcc --version"
             sh "mkdir -p cxs/wrappers/node/lib"
             sh "ls -l"
-            sh "cd cxs/libcxs; cargo test"
+            sh "cd cxs/libcxs; cargo test -- --test-threads=1"
             sh "cp cxs/libcxs/target/debug/libcxs.so cxs/wrappers/node/lib/"
             sh "ls cxs/wrappers/node/lib"
         }
