Changes to Jenkinsfile

--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -20,10 +20,10 @@ node('ubuntu') {
         buildRust(app)
 //        testRust(app) 
         testNodeWrapper(app)
-        udpdateVersions(app)
+        updateVersions(app)
         createDeb(app)
-        //createZip(app)
-        //createNpmDeb(app) 
+        createZip(app)
+        createNpmDeb(app) 
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
         if (env.BRANCH_NAME == "master") {
