--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -111,11 +111,11 @@ def updateVersions(app) {
 def createDeb(envn) {
   stage('Build Libcxs Debian') {
       envn.inside {
-        SCRIPT = '../../ci/scripts/gzip_so_file.py'
+        SCRIPT = '../ci/scripts/gzip_so_file.py'
         SO_FILE = 'target/debug/libcxs.so'
         sh 'cd cxs/libcxs/; cargo deb --no-build'
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
-        sh "cd cxs/libcxs/; python ${script} ${SO_FILE}"
+        sh "cd cxs/libcxs/; python ${SCRIPT} ${SO_FILE}"
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/release/libcxs.so.*"
         sh 'echo "artfact archive success' // debug
       }
