--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -16,11 +16,16 @@ node('ubuntu') {
             checkout scm
         }
         app = buildDocker()
+        // build the so file and test the so file
         buildRust(app)
+        // update the versions in the toml file and package.json
         updateVersions(app)
+        // test the npm package
         testNodeWrapper(app)
+        // create the debian of the library
         createDeb(app)
-        // // createZip(app)
+        // create the npm tar and npm debian
+        createNpmTar(app)
         // createNpmDeb(app) 
     } catch (Exception ex) {
         currentBuild.result = "FAILED"
@@ -65,18 +70,6 @@ def testRust(envn) {
         sh "echo Testing"
         envn.inside {
             sh "cd cxs/libcxs; cargo test -- --test-threads=1"
-        }
-    }
-}
-
-
-def createZip(envn) {
-    dir ('cxs/libcxs/target/debug'){
-        stage ('Create TAR.GZ File') {
-            envn.inside {
-                sh 'cd cxs/libcxs/target/debug; tar -zvcf libcxs.tar.gz libcxs.so'
-                archiveArtifacts allowEmptyArchive: true, artifacts: 'libcxs.tar.gz'
-            }
         }
     }
 }
@@ -134,16 +127,16 @@ def testNodeWrapper(envn) {
                 sh 'npm test'
             }
         }
-//        stage ('Build Npm Tar'){
-//            envn.inside {
-//                if (env.BRANCH_NAME == "master") {
-//                    sh 'npm pack'
-//                    sh 'ls'
-//                    sh "test -f cxs-${version}.tgz"
-//                    archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
-//                }
-//            }
-//        }
+    }
+    dir ('cxs/wrappers/node') {
+       stage ('Build Npm Tar'){
+            sh 'ls -l'
+            sh 'npm pack'
+            sh 'ls'
+            sh "test -f cxs-*.tgz"
+            archiveArtifacts allowEmptyArchive: true, artifacts: '**/*.tgz'
+          }
+       }
     }
 }
 
