--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -106,14 +106,17 @@ def createDeb(envn) {
       envn.inside {
         SCRIPT = '../ci/scripts/gzip_so_file.py'
         SO_FILE = 'target/debug/libcxs.so'
+        DEST = 'cxs'
         sh 'cd cxs/libcxs/; cargo deb --no-build'
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
-        sh "cd cxs/libcxs/; python ${SCRIPT} ${SO_FILE}"
+        sh "cd cxs/libcxs/; python ${SCRIPT} ${SO_FILE} ${DEST}"
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debug/libcxs.so.*"
       }
   }
 }
 
+
+// Creates the tgz file that can be 'npm install'-ed.
 def testNodeWrapper(envn) {
   dir ('cxs/wrappers/node'){
     stage ('Test Node Wrapper'){
@@ -135,13 +138,25 @@ def testNodeWrapper(envn) {
   }
 }
 
-def fail() {
 
+// Creates debian that can install through npm.
+def createNpmDeb(app){
+  dir('cxs') {
+    stage ('Create Npm Deb') {
+      app.inside {
+        // TODO make this a version number from the script somehow.
+        sh 'python ci/scripts/createNpmDeb wrappers/node/cxs-*.tgz'
+        sh 'ls'
+        archiveArtifacts allowEmptyArchive: true, artifacts: 'cxs/node*.deb'
+      }
+    }
+  }
+}
+
+def fail() {
     def message = [
         message: "$JOB_NAME - Build # $BUILD_NUMBER - fail: Check console output at $BUILD_URL to view the results."
     ]
-
     slackSend message
-
 }
 
