--- a/cxs/ci/Jenkinsfile
+++ b/cxs/ci/Jenkinsfile
@@ -20,12 +20,10 @@ node('ubuntu') {
         buildRust(app)
         // update the versions in the toml file and package.json
         updateVersions(app)
-        // test the npm package
+        // test the npm package and create the npm gzip artifact
         testNodeWrapper(app)
         // create the debian of the library
         createDeb(app)
-        // create the npm tar 
-        createNpmTar(app)
         // create the npm deb 
         createNpmDeb(app) 
     } catch (Exception ex) {
@@ -103,7 +101,7 @@ def updateVersions(app) {
 // Creates the debian package for the library, as well as gzips the libcxs.so.<version> file
 // Publishes both artifacts.
 def createDeb(envn) {
-  stage('Build Libcxs Debian') {
+  stage('Build libcxs Debian and compress .so file') {
       envn.inside {
         SCRIPT = 'cxs/ci/scripts/gzip_so_file.py'
         SO_FILE = 'cxs/libcxs/target/debug/libcxs.so'
@@ -111,7 +109,7 @@ def createDeb(envn) {
         sh 'cd cxs/libcxs/; cargo deb --no-build'
         archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debian/libcxs_*_amd64.deb"
         sh "python ${SCRIPT} ${SO_FILE} ${DEST}"
-        archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debug/libcxs.so.*"
+        archiveArtifacts allowEmptyARchive: true, artifacts: "cxs/libcxs/target/debug/libcxs.so.*.gz"
       }
   }
 }
